Fix for JDK8